# genestack_tools

./: README.md  pyproject.toml
genestack_tools/: assistant.py  assistent.py  custom_types.py  llm_api.py  microarray_assistant.py  microarray_assistent.py  visualization.py
notebooks/: midgut_microarray_analysis_i3c_vs_dmso.ipynb
tests/: test_llm_api.py  test_microarray_assistant.py  test_microarray_assistent.py
