[project]
name = "genestack-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
packages = [{ include = "genestack_tools", from = "." }]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "inmoose (>=0.8.1,<0.9.0)",
    "geoparse (>=2.0.4,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scanpy (>=1.11.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
notebook = "^7.4.5"

